title changes added

--- a/index.html
+++ b/index.html
@@ -53,11 +53,15 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">Add a Note</h5>
+          <div class="input-group mb-3">
+            <input type="text" id="addTitle" class="form-control" placeholder="Note Title" aria-label="Note Title" aria-describedby="basic-addon2">
+          </div>
           <div class="input-group">
             <textarea
               class="form-control"
               aria-label="With textarea"
               id="addTxt"
+              placeholder="Write a note ..."
               required
             ></textarea>
           </div>
